Add research interest on fine surface

--- a/RPC-BA.html
+++ b/RPC-BA.html
@@ -103,7 +103,7 @@ t
         <ol>
                 <li>the satellite trajectory is precise</li>
                 <li>only the calibration and attitude are incorrect, therfore, </li>
-                <li>the refinement can be modelled by a smooth 2D polynomialin x, and y of the image space</li>
+                <li>the refinement can be modelled by a smooth 2D polynomial in x, and y of the image space</li>
               </ol>
 
         <img class="img-fluid lang-en"  style="width:55%" src="img/workflows_sat_bba2.png" alt="" />
@@ -123,7 +123,7 @@ t
         <h3 class="mb-5"> Comparison with GT. </h3>
         <img class="img-fluid lang-en" style="width:75%" src="img/RPC-results.png" alt="" />
         <figcaption>Figure 2. A results in different test scenarios. Red triangular markers correspond with the GCPs, 
-            the black circular markersare the CPs, and the vectors indicate the discrepancies between the BA-estimated and true values of control points in object space. </figcaption>
+            the black circular markersare the CPs, and the vectors indicate the discrepancies between the BA-estimated and true values of control points in object space. The 0 and 1 subscripts refer to the degree of the correcting polynomial. </figcaption>
          
       </div>
        
@@ -136,8 +136,14 @@ t
       <div class="w-100">
         <h2 class="mb-5">Publications</h2>
 
-        <ol id="pub" class="sub">
-        </ol>
+        <ul class="mt-5 mb-5">
+            <li>Rupnik, E., Pierrot-Deseilligny, M., Delorme, A., Klinger, Y.. 
+              Refined satellite image orientation in the free open-source photogrammetric tools APERO/MICMAC. In: <em>ISPRS Ann. Photogramm. Remote Sens. Spatial Inform. Sci.</em>, 3,  pp. 83-90, 2016. 
+                <div class="pubLink">
+                  <a href=" https://hal.archives-ouvertes.fr/hal-02369315" class="imgLink"><img src="img/icons/pdf_icon.gif" height="16" alt="PDF" title="PDF"></a>
+                </div>
+            </li> 
+        </ul>
 
       </div>
     </section>
