--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
                   </div>
                 </div>
             </article> 
+            <article class="col-md-6 col-lg-4" >
+                <div class="portfolio-item d-block ">
+                  <img class="img-fluid" style="width:90%" src="img/OneTwoPix.png" alt="" />
+                  <div class="portfolio-desc d-flex align-center  position-absolute" style="width:90%">
+                    <div class="folio-info my-auto w-100 text-center" >
+                      <a href="OneTwoPix.html" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
+                      <h5 class="lang-en">More surface detail with One-Two-Pixel matching</h5>
+                      <h5 class="lang-fr">More surface detail with One-Two-Pixel matching</h5>
+                    </div>
+                  </div>
+                </div>
+            </article>             
           <article class="col-md-6 col-lg-4">
 								<div class="portfolio-item d-block ">
 									<img class="img-fluid" style="width:90%"  src="img/smdm_thumb.png" alt="" />
@@ -419,8 +431,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
-        <h2 class="mb-5">Selected Publications @IGN</h2>
-
+        <h2 class="mb-5">Selected Publications</h2>
+        <h3 class="mb-0">See the complete list of contributions via <a href="https://scholar.google.com/citations?user=Qjko2xoAAAAJ&hl=en&oi=ao">google scholar</a></h3>
         <span id="pubACL"><div class="subheading mb-3 mt-3">[ACL] Journals</div></span>
         <span id="pubACLN"><div class="subheading mb-3 mt-3">[ACLN] Journals</div></span>
         <span id="pubASCL"><div class="subheading mb-3 mt-3">[ASCL] Others</div></span>
