Add other research activities

--- a/OneTwoPix.html
+++ b/OneTwoPix.html
@@ -87,9 +87,9 @@ t
               With this objective in mind, the research presented here proposes a new matching cost function that produces 
               surfaces of enhanced resolution with respect to the gold standard: the window-based semi-global matching technique. 
               We evaluate the algorithm on different image datasets spanning various acquisition geometries, radiometric qualities 
-                and ground sample distance sizes. In particular, results on Earth satellites (SPOT-7, Pl\'eiades), extraterrestrial 
+                and ground sample distance sizes. In particular, results on Earth satellites (SPOT-7, Pleiades), extraterrestrial 
                 (Chang'E3 moon landing), aerial and terrestrial acquisitions are shown. The implementation of the method is available 
-                in MicMac -- the free open-source software for photogrammetry.</p>
+                in MicMac - the free open-source software for photogrammetry.</p>
       <p class="lead mb-5 lang-fr">Regardez la version anglaise</p>
 
 
@@ -143,7 +143,7 @@ t
         <h3 class="mb-5"> Comparison between different reconstruction methods </h3>
         <img class="img-fluid lang-en" style="width:75%" src="img/One-Two-Pix-matrix-zoom.jpg" alt="" />
         <figcaption>Figure 2. Close-ups on selected DSM areas. The columns starting from left are: the image, grayshaded DSMs computed with
-                CORR, 1P ix and 12P ix, respectively. The rows correspond to UltraCam, SPOT-7 and Pleiade images.</figcaption>
+                CORR, 1Pix and 12Pix, respectively. The rows correspond to UltraCam, SPOT-7 and Pleiade images.</figcaption>
         
         <br>
         <br>
