--- a/RPC-BA.html
+++ b/RPC-BA.html
@@ -137,7 +137,7 @@ t
         <h2 class="mb-5">Publications</h2>
 
         <ul class="mt-5 mb-5">
-            <li>Rupnik, E., Pierrot-Deseilligny, M., Delorme, A., Klinger, Y.. 
+            <li>Rupnik, E., Pierrot Deseilligny, M., Delorme, A., Klinger, Y.. 
               Refined satellite image orientation in the free open-source photogrammetric tools APERO/MICMAC. In: <em>ISPRS Ann. Photogramm. Remote Sens. Spatial Inform. Sci.</em>, 3,  pp. 83-90, 2016. 
                 <div class="pubLink">
                   <a href=" https://hal.archives-ouvertes.fr/hal-02369315" class="imgLink"><img src="img/icons/pdf_icon.gif" height="16" alt="PDF" title="PDF"></a>
