--- a/structureless.html
+++ b/structureless.html
@@ -81,20 +81,19 @@ t
           <span class="text-primary lang-en">structureless</span> pose estimation
         </h1> 
 
-      <p class="lead mb-5 lang-en">The global approaches solve SfM problems by indepen-
-        dently inferring relative motions, followed be a sequential
+      <p class="lead mb-5 lang-en">The global approaches solve SfM problems by independently inferring relative motions, 
+        followed be a sequential
         estimation of global rotations and translations. It is a fast
         approach but not optimal because it relies only on pairs
         and triplets of images and it is not a joint optimisation. In
         this publication we present a methodology that increases
-        the quality of global solutions without the usual computa-
-        tional burden tied to the bundle adjustment. We propose
+        the quality of global solutions without the usual computational 
+        burden tied to the bundle adjustment. We propose
         an efficient structure approximation approach that relies on
         relative motions known upfront. Using the approximated
         structure, we are capable of refining the initial poses at very
         low computational cost. Compared to different benchmark
-        datasets and solutions, our approach improves the process-
-        ing times while maintaining good accuracy.</p>
+        datasets and solutions, our approach improves the processing times while maintaining good accuracy.</p>
       <p class="lead mb-5 lang-fr">Regardez la version anglaise</p>
 
 
@@ -133,7 +132,7 @@ t
         <figcaption>Figure 2. Average position error (err) along the trajectory w.r.t. ground truth for several structure approximation variants </figcaption>
         
         <img class="img-fluid lang-en" style="width:75%" src="img/CAR_v2.jpg" alt="" />
-        <figcaption>Figure 3. Left: excerpt from the dataset. Right: solutions correponding to (a) the ground truth, (b) continuous red line, (c) blue dotted line    , (d) magenta dot-dashed  </figcaption>
+        <figcaption>Figure 3. Left: excerpt from the dataset. Right: solutions correponding to (a) the ground truth, (b) continuous red line, (c) blue dotted line, (d) magenta dot-dashed line in Figure 2. </figcaption>
 
       </div>
        
