--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <p class="lead mb-5 lang-en">Researcher in photogrammetry.</p>
         <p class="lead mb-5 lang-en">Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team</p>
-        <p class="lead mb-5 lang-fr">Chargée de recherche IGN en sciences de l'information géographique, géovisualisation, et généralisation cartographique.</p>
+        <p class="lead mb-5 lang-fr">Chargée de recherche IGN en photogrammetrié</p>
         <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">ACTE</a></p>
         <div class="social-icons"> 
           <a href="https://www.researchgate.net/profile/Ewelina_Rupnik">
@@ -574,7 +574,7 @@
 
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
-                  <h5 class="mb-0">Satellite Image Processing with Open Source Software</h5> 
+                  <h5 class="mb-0">Satellite Image Processing with Open Source Software <a href="https://micmac.ensg.eu">MicMac</a> &  <a href="https://www.orfeo-toolbox.org/">OTB</a> </h5> 
                   <div class="subheading mb-3">ENSG, Marne-la-valée, France</div> 
                 </div>
                 <div class="resume-date text-md-right">
