--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                   <h5 class="mb-0">Satellite Image Processing with Open Source Software <a href="https://micmac.ensg.eu">MicMac</a> &  <a href="https://www.orfeo-toolbox.org/">OTB</a> </h5> 
-                  <div class="subheading mb-3">ENSG, Marne-la-valée, France</div> 
+                  <div class="subheading mb-3">ENSG Ecole national des Sciences Géographiques, Marne-la-valée, France</div> 
                 </div>
                 <div class="resume-date text-md-right">
                   <span class="text-primary">28 August – 1 September 2017 <br> 4-8 July 2016 </span>
