Fix spelling mistakes

--- a/OneTwoPix.html
+++ b/OneTwoPix.html
@@ -110,12 +110,12 @@ t
             fronto-parallel artefacts and with good performance at surface discontinuities. To realise this goal we:</h4>
 
             <ol>
-                    <li>formulate a new matching cost defined over a single pixel,</li>
-                    <li>adopt a second pixel to add context and allow for slope testing with minimum information 
+                    <li>Formulate a new matching cost defined over a single pixel,</li>
+                    <li>Adopt a second pixel to add context and allow for slope testing with minimum information 
                         (a slope is defined by two points in 3D space and it is tested with exactly two pixels),</li>
-                    <li> embed the image dense matching in a semi-global matching framework which favours 
+                    <li>Embed the image dense matching in a semi-global matching framework which favours 
                         slope coherence in the neighbourhood of a point and ensures surface continuity in poorly textured areas,</li>
-                    <li>define the matching cost in a multi-view constraint to increase the robustness of the reconstruction.</li>
+                    <li>Define the matching cost in a multi-view constraint to increase the robustness of the reconstruction.</li>
 
             </ol>  
 
