--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>November 2017 </h4>
-                    <h4 class="subheading">I become a permament researcher at LaSTIG, MATIS / ACTE lab</h4>
+                    <h4 class="subheading">I became a permament researcher at LaSTIG, MATIS / ACTE Lab</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">And I focus on pose estimation problems</p>
@@ -334,7 +334,7 @@
                     <h4 class="subheading">PhD defense</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I go back to Vienna for a few days to defend my PhD</p>
+                    <p class="text-muted">I briefly returned to Vienna, Austria to defend my PhD</p>
                   </div>
                 </div>
               </li>
@@ -348,7 +348,7 @@
                     <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / <a href="http://ign.fr/">IGN</a>, Paris </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I move to Paris to work on satellite images in <a href="https://micmac.ensg.eu/">MicMac</a> with M Pierrot Deseiligny and Y Klinger</p>
+                    <p class="text-muted">I joined the <a href="http://www.ipgp.fr/en/tecto/lithosphere-tectonics-and-mechanics">IPGP Tectonics Lab</a> in Paris, France to work on satellite images in <a href="https://micmac.ensg.eu/">MicMac</a></p>
                   </div>
                 </div>
               </li>
@@ -362,7 +362,7 @@
                     <h4 class="subheading">Researcher at <a href="https://3dom.fbk.eu/">3D Optical Metrology lab @FBK</a></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I move to Trento to work with F Remondino and F Nex </p>
+                    <p class="text-muted">I moved to Trento, Italy to work on oblique imagery </p>
                   </div>
                 </div>
               </li>
@@ -373,7 +373,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>November 2010</h4>
-                    <h4 class="subheading">PhDc at <a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> <a href="https://www.tuwien.at/">@TUWIEN</a>, Austria</h4>
+                    <h4 class="subheading">PhD Candidate at <a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> <a href="https://www.tuwien.at/">@TUWIEN</a>, Austria</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">I begin my PhD studies supervised by J Jansa and N Pfeifer </p>
@@ -458,7 +458,7 @@
               <li> Retour d’expérience dans la recherche: l’outil open source MicMac, <a href="https://inno3.fr/actualite/paris-open-source-summit-2018-decouvrez-le-programme">Paris OpenSource Summit :  Inclusion et diversité, changer la donne </a>, Paris, 5<sup>th</sup> December 2018 </li>
        <!--       <li> Seminar talk at <a href="http://www.geopet.hcmut.edu.vn/el-home-page.html" >Faculty of Geology and Petroleum Engineering</a> HCMC, Vietnam, 15<sup>th</sup> December, 2017 </li> -->
               <li> On photogrammetry at <a href="https://lesbianswhotech.org/speakers/rupnik-ewelina/">LWT Summit @Google</a>, Paris, 23<sup>rd</sup> June 2017 </li>
-              <li> On VHR sattelite image processing, <a href="https://www.geometrinrete.it/CMSContent/Consiglio-Nazionale/Eventi%20Calendario/ProgrammaSIFET2016.pdf">3<sup>rd</sup> Workshop SIFET & SFPT : Multi-disciplinary  and transnational applications of Geomatics</a>, Lecce, Italy, 7 July 2016 </li>
+              <li> On VHR satellite image processing, <a href="https://www.geometrinrete.it/CMSContent/Consiglio-Nazionale/Eventi%20Calendario/ProgrammaSIFET2016.pdf">3<sup>rd</sup> Workshop SIFET & SFPT : Multi-disciplinary  and transnational applications of Geomatics</a>, Lecce, Italy, 7<sub>th</sub> July 2016 </li>
             </ol>
      
           </div>
