Add Structureless video

--- a/structureless.html
+++ b/structureless.html
@@ -87,7 +87,11 @@ t
 
 
     </div>
-    </section> 
+	</section> 
+
+	<video width="780" height="585" controls>
+  		<source src="img/isprs2020_rupnike_vfinale.mp4" type="video/mp4">
+	</video> 	
 
 
     
