Update isprs ss

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                   <div class="subheading mb-3">Nice, France</div> 
                 </div>
                 <div class="resume-date text-md-right">
-                  <span class="text-primary">8-12 June 2019</span>
+                  <span class="text-primary">June 2021</span>
                 </div>
               </div>
 
