Add currently working on

--- a/index.html
+++ b/index.html
@@ -99,8 +99,16 @@
         <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX  ·
           <a>ewelina<!--anti@spam.fr!-->.rupnik@ign.fr</a>
         </div>
-        <p class="lead mb-5 lang-en">Researcher in photogrammetry.</p>
-        <p class="lead mb-5 lang-en">Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team</p>
+		<p class="lead mb-5 lang-en">Researcher in photogrammetry. <br>Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team</p>
+
+		<div>Currently working on:
+		<ul>
+				<li> On algorithms towards structureless bundle adjustement with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li> On automated pose estimation of multi-date historical images with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/127/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li> On epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li>
+
+		</div>
+
         <p class="lead mb-5 lang-fr">Chargée de recherche IGN en photogrammetrié</p>
         <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">ACTE</a></p>
         <div class="social-icons"> 
