--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
 
 		<div>Currently working on:
 		<ul>
-				<li> On algorithms towards structureless bundle adjustement with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
-				<li> On automated pose estimation of multi-date historical images with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/127/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
-				<li> On epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li>
+				<li>algorithms towards structureless bundle adjustement with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li>automated pose estimation of multi-date historical images with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/127/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li>epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li>
+				<li>a chapter on <i>[Image correlation, optical and SAR sensors]</i> within the <i>[Displacement measurement by remote sensing imagery]</i> Wiley Science book; this work is done in collaboration with Renaud Binet (CNES) and <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>;  publication planned for 2021.</li>
 
 		</div>
 
