--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX  ·
           <a>ewelina<!--anti@spam.fr!-->.rupnik@ign.fr</a>
         </div>
-		<p class="lead mb-5 lang-en">Researcher in photogrammetry. <br>Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team</p>
+		<p class="lead mb-5 lang-en">Researcher in photogrammetry | Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team | Editor-in-Chief of <a href="https://rfpt.sfpt.fr">RFPT</a> <br> <a href="https://erupnik.github.io/blog/">My blog</a> </p>
 
 		<div>Currently working on:
 		<ul>
