Add historical pipeline page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<div>Currently working on:
 		<ul>
 				<li>algorithms towards structureless bundle adjustement with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
-				<li>automated pose estimation of multi-date historical images with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/127/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li>automated pose estimation of multi-date historical images with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.umr-lastig.fr/ewelina-rupnik/historicalfeatures.html" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
 				<li>epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li>
 				<li>a chapter on <i>[Image correlation, optical and SAR sensors]</i> within the <i>[Displacement measurement by remote sensing imagery]</i> Wiley Science book; this work is done in collaboration with Renaud Binet (CNES) and <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>;  publication planned for 2021.</li>
 
@@ -140,6 +140,19 @@
         <h2 class="mb-5 lang-fr">Sujets de recherche</h2>
         <hr class="star-dark mb-5">
         <div class="row">
+            <article class="col-md-6 col-lg-4" >
+                <div class="portfolio-item d-block ">
+                  <img class="img-fluid" style="width:70%" src="img/teaser.jpg" alt="" />
+                  <div class="portfolio-desc d-flex align-center  position-absolute" style="width:70%">
+                    <div class="folio-info my-auto w-100 text-center" >
+                      <a href="historicalfeatures.html" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
+                      <h5 class="lang-en">Feature matching in historical multi-date images</h5>
+                      <h5 class="lang-fr">Feature matching in historical multi-date images</h5>
+                    </div>
+                  </div>
+                </div>
+            </article>
+
             <article class="col-md-6 col-lg-4" >
                 <div class="portfolio-item d-block ">
                   <img class="img-fluid" style="width:70%" src="img/ellipsoid-toy_thumb.png" alt="" />
