--- a/historicalfeatures.html
+++ b/historicalfeatures.html
@@ -88,9 +88,9 @@
         </div>
 
         <div class="col-auto research-link align-items-center">
-          <a href="assets/" target="_blank">
+          <a href="https://drive.google.com/uc?id=16sJZiY3sTZSRZKBzpy2IHVloCLj6pEwP" target="_blank">
             <div class="link-icon" style="padding-top:5px;padding-bottom:5px">
-              <img alt="Slides Icon" src="img/slides_thumbnail.jpg" style="height:75px;border:0.5px solid gray">
+              <img alt="Slides Icon" src="img/slide_thumb.jpg" style="height:100px;border:0.5px solid gray">
             </div>
             <p class="aligncenter">SLIDES</p>
           </a>
@@ -118,14 +118,14 @@
 
       <h3>BibTeX Citation</h3>
       <pre>@article{zhang2021histopipeline,
-				author = {Lulin Zhang and 
-					Ewelina Rupnik and 
-					Marc Pierrot-Deseilligny},
-				title = {Feature matching for multi-epoch historical aerial images},
-				journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
-				volume = {182},
-				pages = {176-189},
-				year = {2021},
+	  author = {Lulin Zhang and 
+	            Ewelina Rupnik and 
+	            Marc Pierrot-Deseilligny},
+	  title = {Feature matching for multi-epoch historical aerial images},
+	  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+	  volume = {182},
+	  pages = {176-189},
+	  year = {2021},
 }
 	  </pre>
 
