--- a/historicalfeatures.html
+++ b/historicalfeatures.html
@@ -98,7 +98,7 @@
 
       </div>
 
-      <p class="tldr">In-brief: This paper introduces a pipeline that improves the accuracy of pose estimation of multi-epoch historical images by finding reliable and precise feature matches invariant to time. To do that we exploit RGB images and coarse 3D geometry, as well as the modern deep learning feauture matching algorithms.</p>
+	  <p class="tldr"><span style="font-weight:600">In-brief</span>: This paper introduces a pipeline that improves the accuracy of pose estimation of multi-epoch historical images by finding reliable and precise feature matches invariant to time. To do that we exploit RGB images and coarse 3D geometry, as well as the modern deep learning feauture matching algorithms.</p>
 
       <div class="figure1 pb-3">
 		<p class="aligncenter">
