--- a/index.html
+++ b/index.html
@@ -101,11 +101,13 @@
         </div>
 		<p class="lead mb-5 lang-en">Researcher in photogrammetry | Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team | Editor-in-Chief of <a href="https://rfpt.sfpt.fr">RFPT</a> <br> <a href="https://erupnik.github.io/blog/">My blog</a> </p>
 
-		<div>Currently working on:
+		<div>Currently, mainly working on:
 		<ul>
-				<li>algorithms towards structureless bundle adjustement with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
-				<li>automated pose estimation of multi-date historical images with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.umr-lastig.fr/ewelina-rupnik/historicalfeatures.html" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
-				<li>epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li>
+				<li>algorithms towards <span style="font-weight:600">structureless bundle adjustement</span> with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li>automated pose estimation of <span style="font-weight:600">multi-date historical images</span> with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.umr-lastig.fr/ewelina-rupnik/historicalfeatures.html" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
+				<li> automated processing of pushbroom-panoramic <span style="font-weight:600">Corona images</span> with <a href="https://scholar.google.com/citations?user=IRbTXOMAAAAJ&hl=en">Sajid Ghuffar</a></li>
+				<li> 2D image dense matching for <span style="font-weight:600">quantifying earthquake-induced displacements</span> using deep learning approaches with <a href="https://www.ipgp.fr/fr/delorme-arthur">Arthur Delorme</a></li>
+				<!--<li>epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li> -->
 				<li>a chapter on <i>[Image correlation, optical and SAR sensors]</i> within the <i>[Displacement measurement by remote sensing imagery]</i> Wiley Science book; this work is done in collaboration with Renaud Binet (CNES) and <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>;  publication planned for 2021.</li>
 
 		</div>
