Add work on corona+twitter

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         </div>
 		<p class="lead mb-5 lang-en">Researcher in photogrammetry | Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team | Editor-in-Chief of <a href="https://rfpt.sfpt.fr">RFPT</a> <br> <a href="https://erupnik.github.io/blog/">My blog</a> </p>
 
-		<div>Currently, mainly working on:
+		<div>Currently working on:
 		<ul>
 				<li>algorithms towards <span style="font-weight:600">structureless bundle adjustement</span> with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>, <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/71/2020/" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
 				<li>automated pose estimation of <span style="font-weight:600">multi-date historical images</span> with <a href="https://www.umr-lastig.fr/Lulin-Zhang/">Lulin</a>, <a href="https://www.umr-lastig.fr/ewelina-rupnik/historicalfeatures.html" ><img src="img/icons/pdf_icon.gif" height="15"></a></li>
-				<li> automated processing of pushbroom-panoramic <span style="font-weight:600">Corona images</span> with <a href="https://scholar.google.com/citations?user=IRbTXOMAAAAJ&hl=en">Sajid Ghuffar</a></li>
+				<li> automated processing of pushbroom-panoramic <span style="font-weight:600">Corona images</span> with <a href="https://scholar.google.com/citations?user=IRbTXOMAAAAJ&hl=en">Sajid Ghuffar</a> <a href="https://arxiv.org/pdf/2201.07756.pdf" ><img src="img/icons/pdf_icon.gif" height="15"></a> </li>
 				<li> 2D image dense matching for <span style="font-weight:600">quantifying earthquake-induced displacements</span> using deep learning approaches with <a href="https://www.ipgp.fr/fr/delorme-arthur">Arthur Delorme</a></li>
 				<!--<li>epipolar geometry resampling of a generic camera model with <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a></li> -->
 				<li>a chapter on <i>[Image correlation, optical and SAR sensors]</i> within the <i>[Displacement measurement by remote sensing imagery]</i> Wiley Science book; this work is done in collaboration with Renaud Binet (CNES) and <a href="https://micmac.ensg.eu/index.php/Marc_Pierrot-Deseilligny">Marc</a>;  publication planned for 2021.</li>
@@ -115,21 +115,21 @@
         <p class="lead mb-5 lang-fr">Chargée de recherche IGN en photogrammetrié</p>
         <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">ACTE</a></p>
         <div class="social-icons"> 
-          <a href="https://www.researchgate.net/profile/Ewelina_Rupnik">
+          <!--<a href="https://www.researchgate.net/profile/Ewelina_Rupnik">
             <i class="ai ai-researchgate"></i>
+          </a>-->
+          <a href="https://scholar.google.com/citations?user=Qjko2xoAAAAJ&hl=en&oi=ao">
+            <i class="ai ai-google-scholar"></i>
           </a>
           <a href="https://github.com/erupnik">
             <i class="fab fa-github"></i>
           </a> 
-          <a href="https://scholar.google.com/citations?user=Qjko2xoAAAAJ&hl=en&oi=ao">
-            <i class="ai ai-google-scholar"></i>
-          </a>
-          <a href="https://orcid.org/0000-0002-7229-5501">
+          <!--<a href="https://orcid.org/0000-0002-7229-5501">
             <i class="ai ai-orcid"></i>
-          </a>
-         <!-- <a href="ewelina-rupnik">
-            <i class="ai"><img src="img/icons/hal-b2.svg" width=45px/></i>
           </a>-->
+         <a href="https://twitter.com/enikrup">
+            <i class="fab fa-twitter"></i>
+          </a>
         </div>
       </div>
     </section>
